--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -36,6 +36,10 @@
 <div class="row">
   <div class="col-xs-12">
     <div><strong>Ingredients:</strong></div>
-    <app-recipe-ingredients *ngFor="let ingredient of recipe.ingredients" [ingredient]="ingredient"></app-recipe-ingredients>
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+      {{ingredient.name}} - {{ingredient.amount}}
+      </li>
+    </ul>
   </div>
 </div>
