Passing Ingredients from Recipes to the Shopping List

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,7 +21,7 @@
       Manage Recepi <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
-      <li><a href="#">To Shopping List</a></li>
+      <li><a (click)="onAddToShoppiongList()" style="cursor: pointer;">To Shopping List</a></li>
       <li><a href="#">Edit Recepi</a></li>
       <li><a href="#">Delite Recepi</a></li>
     </ul>
